--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 
     <!-- HEADER -->
-    <header class="header">
-        <div class="logo">
+    <header class="menu">
+        <div>
             <img src="./public/img/logo.png" alt="Logo">
         </div>
-        <nav class="menu">
+        <nav>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -27,10 +27,10 @@
 
 
     <!-- MAIN -->
-    <main class="main">
+    <main>
         <section class="first">
-            <div>
-                <h1>Welcome to My Website</h1>
+            <div class="welcome">
+                <h1>This website is awesome</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt delectus nobis ullam, nostrum eligendi, cupiditate quaerat, neque illum doloribus fugiat eius corporis nesciunt officia consequuntur deleniti assumenda accusamus fugit vitae?</p>
                 <button class="btn">Sign up</button>
             </div>
@@ -40,9 +40,9 @@
         </section>
         <section class="second">
             <div>
-                <h2>Some random info.</h2>
+                <h2>Some random information.</h2>
             </div>
-            <div>
+            <div class="gallery">
                 <div>
                     <img src="./public/img/mont1.jpg" alt="mont1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -62,18 +62,14 @@
             </div>
         </section>
         <section class="third">
-            <div>
-                <q>The happiness of your life depends upon the quality of your thoughts. So guard yourself from negative and pessimistic thoughts. Take care to focus on what is within your control, and do not let your mind wander to things that are beyond it. We are not disturbed by things, but by the views we take of them.</q>
-            </div>
-            <div>
-                <p>-Marco Aurelio</p>
-            </div>
+            <span><q><em>The happiness of your life depends upon the quality of your thoughts. So guard yourself from negative and pessimistic thoughts. Take care to focus on what is within your control, and do not let your mind wander to things that are beyond it. We are not disturbed by things, but by the views we take of them.</em></q></span>
+            <span class="autor">-Marco Aurelio</span>
         </section>
         <section class="fourth">
-            <div>
-                <div>
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="signup">
+                <div class="text">
+                    <span><h4>Call to action! It's time!</h4></span>
+                    <span><p>Sign up for our product by clicking that button right over there!</p></span>
                 </div>
                 <div>
                     <button class="btn">Sign up</button>
@@ -85,7 +81,9 @@
 
     <!-- FOOTER -->
     <footer>
-        <span>by ntf_thGrey 2025</span>
+        <span>by ntf_theGrey 2025</span>
     </footer>
+
+
 </body>
 </html>
